@@ -1,5 +1,8 @@
 This file documents the revision history for the Mod-Gearman-Worker-Go
 
+next:
+          - improve restarting epn server
+
 1.3.1    Wed Feb 15 12:09:33 CET 2023
           - fix epn file detection
           - fix issue with dup servers (#19)
